--- a/src/main/resources/templates/student/class_add.html
+++ b/src/main/resources/templates/student/class_add.html
@@ -47,7 +47,7 @@
 							<input type="text" name="class_teacher" required="" lay-verify="nikename" autocomplete="off" class="layui-input" />
 						</div>
 					</div>
-					<div class="layui-form-item" style="visibility: hidden; margin: 0; overflow: hidden;">
+					<div class="layui-form-item" style="visibility: hidden; margin: 0; overflow: hidden; height: 0;">
 						<label class="layui-form-label">是否往期</label>
 						<div class="layui-input-block">
 							<input type="radio" name="class_iscurrent" value="0" title="否" />
