--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -32,14 +32,14 @@
 		<div class="layui-fluid">
 			<div class="layui-clear">
 				<div class="user-btns">
-					<button type="button" class="layui-btn" id="addUser">添加用户</button>
+					<button type="button" class="layui-btn layui-btn-sm" id="addUser">添加用户</button>
 				</div>
 				<div class="user-search">
 					<form class="layui-form" th:action="@{/admin/user/list}" method="get" th:value="${username}">
 						<div class="layui-input-inline">
-							<input type="text" name="username" placeholder="请输入老师姓名或者工号" autocomplete="off" class="layui-input" th:value="${username}" />
+							<input type="text" name="username" placeholder="请输入老师姓名或者工号" autocomplete="off" class="layui-input" style="height: 30px;" th:value="${username}" />
 						</div>
-						<button type="submit" class="layui-btn" lay-submit=""><i class="layui-icon layui-icon-search"></i></button>
+						<button type="submit" class="layui-btn layui-btn-sm" lay-submit=""><i class="layui-icon layui-icon-search"></i></button>
 					</form>
 				</div>
 			</div>
