--- a/src/main/resources/templates/shiyan/changeExpModel.html
+++ b/src/main/resources/templates/shiyan/changeExpModel.html
@@ -1,190 +1,108 @@
-<!DOCTYPE html >
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="referrer" content="no-referrer">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>修改---实验模块</title>
-    <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-
-</head>
-<style type="text/css">
-    #content {
-        padding: 2%;
-    }
-
-    .layui-input-block {
-        margin-left: 150px;
-    }
-
-    .layui-form-label {
-        width: inherit;
-        font-weight: 900;
-    }
-
-    .layui-upload {
-        margin-left: 150px;
-    }
-
-    .layui-upload-list {
-        width: 200px;
-        height: 200px;
-        border: #B2B2B2 solid 1px;
-    }
-
-    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
-        display: block;
-        width: 100%;
-        height: 38px;
-        background-color: #fff;
-        /*border:1px solid #e6e6e6 ;*/
-        position: absolute;
-    }
-
-    .layui-upload-list img {
-        with: 100%;
-        max-height: 100%;
-    }
-
-    .layui-upload-list img {
-        width: 100%;
-        max-height: 100%;
-    }
-
-    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
-        display: none;
-    }
-</style>
-<body>
-
-<!--<div style="text-align: center;margin-top:30px;font-size: 20px;">修改-&#45;&#45;实验模块</div>-->
-<div class="layui-container" id="content">
-    <div class="layui-row">
-        <form class="layui-form layui-col-md7" th:action="@{|/expmodel/updateExpModel/${preExpModel.m_id}|}"
-              method="post" th:object="${preExpModel}" enctype="multipart/form-data">
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验名称：</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_name" lay-verify="title" autocomplete="off" placeholder="请输入实验名称"
-                           class="layui-input" th:value="${preExpModel.m_name}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验简介图片:</label>
-                <div class="layui-upload">
-                    <input type="file" id="test1" name="m_image" value="上传图片" onchange="xmTanUploadImg(this)"/>
-                    <div class="layui-upload-list">
-                        <img class="layui-upload-img" id="selectImg" th:src="${image}"/>
-                        <p id="demoText"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验负责人:</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_manager" lay-verify="title" autocomplete="off" placeholder="请输入实验负责人"
-                           class="layui-input" th:value="${preExpModel.m_manager}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验类型：</label>
-                <div class="layui-input-block">
-                    <select name="m_type" lay-filter="aihao" th:value="${preExpModel.m_type}">
-                        <option value="理论验证">理论验证</option>
-                        <option value="综合实操" selected="">综合实操</option>
-                        <option value="拓展创新">拓展创新</option>
-                    </select>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">课时：</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_classhour" lay-verify="title" autocomplete="off" placeholder="请输入课时"
-                           class="layui-input" th:value="${preExpModel.classhour}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验平台链接：</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_inurl" lay-verify="title" autocomplete="off" placeholder="请输入实验平台链接"
-                           class="layui-input" th:value="${preExpModel.m_inurl}">
-                </div>
-
-            </div>
-            <div class="layui-form-item" style="visibility: hidden">
-                <label class="layui-form-label">实验报告类型：</label>
-                <div class="layui-input-block">
-                    <input type="radio" name="report_type" value="1" title="学院版" th:field="${preExpModel.report_type}">
-                    <input type="radio" name="report_type" value="0" title="自定义版" th:field="${preExpModel.report_type}">
-                </div>
-            </div>
-
-
-            <div class="layui-form-item">
-                <div class="layui-input-block">
-                    <input class="layui-btn" lay-submit lay-filter="formDemo" value="修改" type="submit">
-                    <a type="butten" class="layui-btn layui-btn-primary" th:href="@{/expmodel/list}">取消</a>
-                    <a type="layui-btn" class="layui-btn layui-bg-green"
-                       th:href="@{|/expmodel/updateExpTheory/${preExpModel.m_id}|}">修改理论学习</a>
-                    <!--				      	<a type="layui-btn" class="layui-btn layui-btn-primary" th:href="@{|/expmodel/deleteTheory/${preExpModel.m_id}|}">删除理论学习</a>-->
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-</body>
-
-
-<script src="../../static/js/layui.all.js"></script>
-<script type="text/javascript">
-    layui.use(['element', 'form'], function () {
-        var form = layui.form;
-    })
-
-    function xmTanUploadImg(obj) {
-        var file = obj.files[0];
-        var reader = new FileReader();
-        reader.readAsDataURL(file);
-        reader.onload = function (e) { //成功读取文件
-            var img = document.getElementById("selectImg");
-            img.src = e.target.result;
-        };
-    }
-
-    // layui.use('upload', function(){
-    //   var $ = layui.jquery
-    //   ,upload = layui.upload;
-    //
-    //   //普通图片上传
-    //   var uploadInst = upload.render({
-    //     elem: '#test1'
-    //     ,url: 'https://httpbin.org/post' //改成您自己的上传接口
-    //     ,before: function(obj){
-    //       //预读本地文件示例，不支持ie8
-    //       obj.preview(function(index, file, result){
-    //         $('#demo1').attr('src', result); //图片链接（base64）
-    //       });
-    //     }
-    //     ,done: function(res){
-    //       //如果上传失败
-    //       if(res.code > 0){
-    //         return layer.msg('上传失败');
-    //       }
-    //       //上传成功
-    //     }
-    //     ,error: function(){
-    //       //演示失败状态，并实现重传
-    //       var demoText = $('#demoText');
-    //       demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
-    //       demoText.find('.demo-reload').on('click', function(){
-    //         uploadInst.upload();
-    //       });
-    //     }
-    //   });
-    // });
-</script>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>修改实验模块</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form {
+				width: 600px;
+			}
+			.preview-box {
+				margin-top: 10px;
+			}
+			.preview-box img {
+				display: block;
+				border: 1px solid #ccc;
+				max-width: 400px;
+				max-height: 300px;
+				padding: 5px;
+				box-sizing: border-box;
+			}
+			.layui-form-label {
+				width: 120px;
+			}
+			.layui-input-block {
+				margin-left: 150px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form" th:action="@{|/expmodel/updateExpModel/${preExpModel.m_id}|}" method="post" enctype="multipart/form-data" th:object="${preExpModel}">
+				<input type="hidden" name="report_type" th:value="${preExpModel.report_type}" />
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验名称：</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_name" lay-verify="required" autocomplete="off" class="layui-input" th:value="${preExpModel.m_name}" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验简介图片:</label>
+					<div class="layui-input-block">
+						<label for="fileInput" class="layui-btn"><i class="layui-icon layui-icon-upload"></i>上传图片</label>
+						<input type="file" name="m_image" id="fileInput" style="display: none;" />
+						<div class="preview-box">
+							<img class="layui-upload-img" id="preview" th:src="${image}" />
+						</div>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验负责人:</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_manager" lay-verify="required" autocomplete="off" class="layui-input" th:value="${preExpModel.m_manager}" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验类型：</label>
+					<div class="layui-input-block">
+						<select name="m_type" lay-verify="required" th:value="${preExpModel.m_type}">
+							<option value="综合实操" selected>综合实操</option>
+							<option value="理论验证">理论验证</option>
+							<option value="拓展创新">拓展创新</option>
+						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">课时：</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_classhour" lay-verify="required" autocomplete="off" class="layui-input" th:value="${preExpModel.classhour}" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验平台链接：</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_inurl" lay-verify="required" autocomplete="off" class="layui-input" th:value="${preExpModel.m_inurl}" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<div class="layui-input-block">
+						<button type="submit" class="layui-btn" lay-submit>修改</button>
+						<a class="layui-btn layui-btn-primary" href="/expmodel/list">取消</a>
+						<a class="layui-btn" th:href="@{|/expmodel/updateExpTheory/${preExpModel.m_id}|}">修改理论学习</a>
+					</div>
+				</div>
+			</form>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				$('#fileInput').live('change', function () {
+					$('#preview').attr('src', URL.createObjectURL(this.files[0]))
+				})
+			})
+		</script>
+	</body>
 </html>
