--- a/src/main/resources/templates/shiyan/lookExpModel.html
+++ b/src/main/resources/templates/shiyan/lookExpModel.html
@@ -1,173 +1,96 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>查找/删除---实验模块</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
-    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-    <!--<link rel="stylesheet" href="./css/font.css">-->
-    <link rel="stylesheet" type="text/css" href="../../static/css/font.css"/>
-    <!--<link rel="stylesheet" href="./css/xadmin.css">-->
-    <link rel="stylesheet" type="text/css" href="../../static/css/xadmin.css"/>
-    <!--<script src="./lib/layui/layui.js" charset="utf-8"></script>-->
-    <script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
-    <!--<script type="text/javascript" src="./js/xadmin.js"></script>-->
-    <script src="../../static/js/xadmin.js" type="text/javascript" charset="utf-8"></script>
-
-</head>
-<style>
-    .text-overflow {
-        display: block; /*内联对象需加*/
-        width: 31em; /*指定宽度*/
-        word-break: keep-all; /* 不换行 */
-        white-space: nowrap; /* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-        overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow: ellipsis; /* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-
-    table {
-        width: 30em;
-        table-layout: fixed; /* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-    }
-
-    .layui-table th {
-        text-align: center;
-        font-weight: 900;
-    }
-
-    td {
-        text-align: center;
-        width: 100%;
-        word-break: keep-all; /* 不换行 */
-        white-space: nowrap; /* 不换行 */
-        overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-</style>
-<body>
-
-<!--<div style="text-align: center;margin-top:30px;font-size: 20px;">查找/删除-&#45;&#45;实验模块</div>-->
-
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body ">
-                    <!--                            <form class="layui-form layui-col-space5" th:action="@{/expmodel/viewExpModel}" method="get">-->
-                    <!--                            	<a type="layui-btn" class="layui-btn layui-bg-green" th:href="@{/expmodel/addExpModel}">新建</a>-->
-                    <!--                                <div class="layui-inline layui-show-xs-block">-->
-                    <!--                                    <input type="text" name="m_name"  placeholder="请输入实验名称" required="required" autocomplete="off" class="layui-input">-->
-                    <!--                                </div>-->
-                    <!--                                <div class="layui-inline layui-show-xs-block">-->
-                    <!--                                    <input type="submit"  class="layui-btn"  lay-submit="" lay-filter="sreach" value="搜索"/>-->
-                    <!--                                </div>-->
-                    <!--                                -->
-                    <!--                                &lt;!&ndash;<div class="layui-inline layui-show-xs-block">-->
-                    <!--                                    <a class="layui-btn"  lay-submit="" title="增加" onclick="xadmin.open('增加','班级新增.html')"><i class="layui-icon"></i>增加</a>-->
-                    <!--                                </div>&ndash;&gt;-->
-                    <!--                            </form>-->
-                    <div class="layui-form-item">
-                        <label class="layui-form-label" style="padding-top: 20px; ">课程筛选</label>
-                        <div class="layui-input-block" style="width: 17%;">
-                            <select name="interest" lay-filter="aihao"
-                                    onchange="window.open(this.options[this.selectedIndex].value,target='_self')"
-                                    style="margin-top: 15px;height: 30px;width: 150px;border-color: lightgray;">
-                                <option th:value="|/expmodel/expModelListByCourseId/-1|">请选择</option>
-                                <div th:each="course:${courseInfoList}" class="">
-                                    <option th:value="|/expmodel/expModelListByCourseId/${course.id}|"
-                                            th:text="${course.courseName}" th:if="${course.getId() ne selected}">java
-                                    </option>
-                                    <option th:value="|/expmodel/expModelListByCourseId/${course.id}|"
-                                            th:text="${course.courseName}" selected="selected"
-                                            th:if="${course.getId()  eq selected}">java
-                                    </option>
-                                    <!--<p th:text="${course.courseName}"></p>-->
-                                </div>
-                            </select>
-
-                        </div>
-                        <div class="layui-card-body " th:if="${Choose} ">
-                            <a type="layui-btn" th:href="@{|/expmodel/addExpModel|}"
-                               class="layui-btn layui-bg-green">新建实验模块</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="layui-card-body " th:if="${Choose} ">
-                    <table class="layui-table layui-form">
-                        <thead>
-                        <tr>
-
-                            <th>ID</th>
-                            <th>实验名称</th>
-                            <th>负责人</th>
-                            <th>实验类型</th>
-                            <th>课时</th>
-<!--                            <th>实验地址</th>-->
-                            <th>操作</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="list:${page}">
-
-                            <td th:text="${list.getM_id()}"></td>
-                            <td th:text="${list.getM_name()}"></td>
-                            <td th:text="${list.getM_manager()}"></td>
-                            <td th:text="${list.getM_type()}"></td>
-                            <td th:text="${list.getClasshour()}"></td>
-<!--                            <td th:text="${list.getM_inurl()}"></td>-->
-                            <td class="td-manage">
-                                <!--                                      <a title="编辑"  onclick="xadmin.open('编辑','班级修改.html')" href="javascript:;">-->
-                                <!--<i class="layui-icon">&#xe642;</i>-->
-                                <a class="layui-btn layui-bg-green"
-                                   th:href="@{|/expmodel/updateExpModel/${list.getM_id()}|}">编辑</a>
-                                <!--                             -->
-
-                                <!--                                      </a>-->
-                                <!--                                      <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">-->
-                                <!--<i class="layui-icon">&#xe640;</i>-->
-                                <!--                                        <a type="layui-btn" class="layui-btn layui-bg-red" th:href="@{|/expmodel/deleteExpModel/${list.getM_id()}|}">删除</a>-->
-                                <button class="layui-btn layui-bg-red" type="button" th:name="${list.getM_id()}"
-                                        onclick="del(this)">删除
-                                </button>
-                                <!--                                      </a>-->
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!--                <div class="layui-card-body ">-->
-                <!--                    <div class="page">-->
-                <!--                        <div>-->
-                <!--                            <a class="prev"-->
-                <!--                               th:href="@{/expmodel/list(pageNum=${page.hasPrevious()}?${page.number}-1:0)}">&lt;&lt;</a>-->
-                <!--                            <a class="next"-->
-                <!--                               th:href="@{/expmodel/list(pageNum=${page.hasNext()}?${page.number}+1:${page.number})}">&gt;&gt;</a>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
-<script>
-
-
-    function del(obj) {
-        var id = obj.name;
-        var ques = confirm("确定要删除该模块吗？该操作具有重大影响请慎重考虑！！！")
-        if (ques == true) {
-            $.get("/expmodel/deleteExpModel/" + id, function () {
-                location.reload()
-            })
-        }
-    }
-
-
-</script>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>实验模块管理</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-label {
+				width: auto;
+				padding: 0 10px 0 0;
+				line-height: 30px;
+			}
+			.layui-input {
+				height: 30px;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程</label>
+					<div class="layui-input-inline">
+						<select lay-filter="id">
+							<option value="">请选择</option>
+							<option th:each="course:${courseInfoList}" th:value="|/expmodel/expModelListByCourseId/${course.id}|" th:text="${course.courseName}" th:selected="${course.getId()  eq selected}"></option>
+						</select>
+					</div>
+					<div class="layui-input-inline" th:if="${Choose}">
+						<a href="/expmodel/addExpModel" class="layui-btn layui-btn-sm">新建实验模块</a>
+					</div>
+				</div>
+			</form>
+			<table class="layui-table layui-form" th:if="${Choose}">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>实验名称</th>
+						<th>负责人</th>
+						<th>实验类型</th>
+						<th>课时</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="list:${page}">
+						<td th:text="${list.getM_id()}"></td>
+						<td th:text="${list.getM_name()}"></td>
+						<td th:text="${list.getM_manager()}"></td>
+						<td th:text="${list.getM_type()}"></td>
+						<td th:text="${list.getClasshour()}"></td>
+						<td class="td-manage">
+							<a class="layui-btn layui-btn-sm" th:href="|/expmodel/updateExpModel/${list.getM_id()}|">编辑</a>
+							<button type="button" class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${list.getM_id()}">删除</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var laypage = layui.laypage,
+					form = layui.form,
+					layer = layui.layer
+				form.on('select(id)', function (data) {
+					window.location.href = data.value
+				})
+				$('.delBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.confirm('确定要删除该模块吗？该操作具有重大影响请慎重考虑！！！', function () {
+						$.get('/expmodel/deleteExpModel/' + _id, function () {
+							window.location.reload()
+						})
+					})
+				})
+			})
+		</script>
+	</body>
 </html>
