--- a/src/main/resources/templates/shiyan/newExpModel.html
+++ b/src/main/resources/templates/shiyan/newExpModel.html
@@ -1,197 +1,112 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>新建---实验模块</title>
-    <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-
-</head>
-<style type="text/css">
-    #content {
-        padding: 2%;
-    }
-
-    .layui-input-block {
-        margin-left: 150px;
-    }
-
-    .layui-form-label {
-        width: inherit;
-        font-weight: 900;
-    }
-
-    .layui-upload {
-        margin-left: 150px;
-    }
-
-    .layui-upload-list {
-        width: 200px;
-        height: 200px;
-        border: #B2B2B2 solid 1px;
-    }
-
-    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
-        display: block;
-        width: 100%;
-        height: 38px;
-        background-color: #fff;
-        /*border:1px solid #e6e6e6 ;*/
-        position: absolute;
-    }
-
-    .layui-upload-list img {
-        with: 100%;
-        max-height: 100%;
-    }
-
-    .layui-upload-list img {
-        width: 100%;
-        max-height: 100%;
-    }
-
-    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
-        display: none;
-    }
-</style>
-<body>
-
-<!--<div style="text-align: center;margin-top:30px;font-size: 20px;">新建-&#45;&#45;实验模块</div>-->
-<div class="layui-container" id="content">
-    <div class="layui-row">
-        <h1 th:text="|课程名称:${CourseInfo.getCourseName()}|"></h1>
-        <form class="layui-form layui-col-md7" th:action="@{/expmodel/addExpModel}" method="post"
-              enctype="multipart/form-data">
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验名称：</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_name" lay-verify="title" required="required" autocomplete="off"
-                           placeholder="请输入实验名称" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验简介图片:</label>
-                <div class="layui-upload">
-                    <input type="file" id="test1" name="m_image" required="required" value="上传图片"
-                           onchange="xmTanUploadImg(this)"/>
-                    <div class="layui-upload-list">
-                        <img class="layui-upload-img" id="selectImg">
-                        <p id="demoText"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验负责人:</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_manager" required="required" lay-verify="title" autocomplete="off"
-                           placeholder="请输入实验负责人" class="layui-input">
-                    <!--                    <select name="m_manager" lay-filter="aihao"-->
-                    <!--                            onchange="window.open(this.options[this.selectedIndex].value,target='_self')"-->
-                    <!--                            style="margin-top: 15px;height: 30px;width: 150px;border-color: lightgray;">-->
-                    <!--                        <option>请选择</option>-->
-                    <!--                        <div th:each="user:${users}" class="">-->
-                    <!--                            <option th:value="${user.id}"-->
-                    <!--                                    th:text="${user.nickname}">张三-->
-                    <!--                            </option>-->
-                    <!--                        </div>-->
-                    <!--                    </select>-->
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">实验类型：</label>
-                <div class="layui-input-block">
-                    <select name="m_type" lay-filter="aihao" required="required">
-                        <option value="理论验证">理论验证</option>
-                        <option value="综合实操" selected="">综合实操</option>
-                        <option value="拓展创新">拓展创新</option>
-                    </select>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">课时：</label>
-                <div class="layui-input-block">
-                    <input type="text" name="m_classhour" required="required" lay-verify="title" autocomplete="off"
-                           placeholder="请输入课时" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-input-block">
-                    <input type="submit" class="layui-btn layui-bg-green" href="../expmodel/addTheory" value="添加理论学习"/>
-                    <a class="layui-btn layui-btn-primary" href="../expmodel/list" th:href="@{/expmodel/list}">取消</a>
-                </div>
-            </div>
-            <div class="layui-form-item" style="visibility: hidden">
-                <label class="layui-form-label">实验平台链接：</label>
-                <div class="layui-input-block">
-                    <input type="hidden" name="m_inurl" required="required" lay-verify="title" autocomplete="off"
-                           placeholder="请输入实验平台链接" class="layui-input" value="www.sctu.edu.cn">
-                </div>
-            </div>
-            <div class="layui-form-item" style="visibility: hidden">
-                <label class="layui-form-label">实验报告类型：</label>
-                <div class="layui-input-block">
-                    <input type="radio" name="report_type" value="1" title="学院版"/>
-                    <input type="radio" name="report_type" value="0" title="自定义版"/>
-                </div>
-            </div>
-
-
-        </form>
-    </div>
-</div>
-</body>
-
-<script src="../../static/js/layui.all.js"></script>
-<script type="text/javascript">
-    layui.use(['element', 'form'], function () {
-        var form = layui.form;
-    })
-
-    function xmTanUploadImg(obj) {
-        var file = obj.files[0];
-        var reader = new FileReader();
-        reader.readAsDataURL(file);
-        reader.onload = function (e) { //成功读取文件
-            var img = document.getElementById("selectImg");
-            img.src = e.target.result;
-        };
-    }
-
-    // layui.use('upload', function(){
-    //   var $ = layui.jquery
-    //   ,upload = layui.upload;
-    //
-    //   //普通图片上传
-    //   var uploadInst = upload.render({
-    //     elem: '#test1'
-    //     ,url: 'https://httpbin.org/post' //改成您自己的上传接口
-    //     ,before: function(obj){
-    //       //预读本地文件示例，不支持ie8
-    //       obj.preview(function(index, file, result){
-    //         $('#demo1').attr('src', result); //图片链接（base64）
-    //       });
-    //     }
-    //     ,done: function(res){
-    //       //如果上传失败
-    //       if(res.code > 0){
-    //         return layer.msg('上传失败');
-    //       }
-    //       //上传成功
-    //     }
-    //     ,error: function(){
-    //       //演示失败状态，并实现重传
-    //       var demoText = $('#demoText');
-    //       demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
-    //       demoText.find('.demo-reload').on('click', function(){
-    //         uploadInst.upload();
-    //       });
-    //     }
-    //   });
-    // });
-</script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>新建实验模块</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.lession-title {
+				font-size: 18px;
+				line-height: 32px;
+				margin-bottom: 10px;
+				width: 600px;
+				text-align: center;
+			}
+			.layui-form {
+				width: 600px;
+			}
+			.preview-box {
+				display: none;
+				margin-top: 10px;
+			}
+			.preview-box img {
+				display: block;
+				border: 1px solid #ccc;
+				max-width: 400px;
+				max-height: 300px;
+				padding: 5px;
+				box-sizing: border-box;
+			}
+			.layui-form-label {
+				width: 120px;
+			}
+			.layui-input-block {
+				margin-left: 150px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<div class="lession-title" th:text="|课程名称:${CourseInfo.getCourseName()}|"></div>
+			<form class="layui-form" th:action="@{/expmodel/addExpModel}" method="post" enctype="multipart/form-data">
+				<input type="hidden" name="m_inurl" value="www.sctu.edu.cn" />
+				<input type="hidden" name="report_type" value="1" />
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验名称：</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_name" lay-verify="required" autocomplete="off" placeholder="请输入实验名称" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验简介图片:</label>
+					<div class="layui-input-block">
+						<label for="fileInput" class="layui-btn"><i class="layui-icon layui-icon-upload"></i>上传图片</label>
+						<input type="file" name="m_image" lay-verify="required" id="fileInput" style="display: none;" />
+						<div class="preview-box">
+							<img class="layui-upload-img" id="preview" />
+						</div>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验负责人:</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_manager" lay-verify="required" autocomplete="off" placeholder="请输入实验负责人" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">实验类型：</label>
+					<div class="layui-input-block">
+						<select name="m_type" lay-verify="required">
+							<option value="综合实操" selected="">综合实操</option>
+							<option value="理论验证">理论验证</option>
+							<option value="拓展创新">拓展创新</option>
+						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">课时：</label>
+					<div class="layui-input-block">
+						<input type="text" name="m_classhour" lay-verify="required" autocomplete="off" placeholder="请输入课时" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<div class="layui-input-block">
+						<button type="submit" class="layui-btn" lay-submit>添加理论学习</button>
+						<a class="layui-btn layui-btn-primary" href="/expmodel/list">取消</a>
+					</div>
+				</div>
+			</form>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				$('#fileInput').live('change', function () {
+					$('#preview').attr('src', URL.createObjectURL(this.files[0]))
+					$('.preview-box').show()
+				})
+			})
+		</script>
+	</body>
 </html>
