--- a/src/main/resources/templates/student/class_administer.html
+++ b/src/main/resources/templates/student/class_administer.html
@@ -18,9 +18,8 @@
 				padding: 0;
 			}
 			.search-bar {
-				margin: 0 0 10px 0;
 				background: #fff;
-				padding: 10px;
+				padding: 15px 0 0 15px;
 			}
 		</style>
 	</head>
@@ -28,13 +27,13 @@
 		<div class="layui-fluid">
 			<form class="layui-form search-bar" th:action="@{/studentManage/viewClass}" method="get">
 				<div class="layui-input-inline">
-					<input type="text" name="class_name" placeholder="请输入班级名称" autocomplete="off" class="layui-input" />
+					<a type="button" class="layui-btn layui-btn-sm addBtn" th:data-url="@{/studentManage/toAddClass}">添加班级</a>
+				</div>
+				<div class="layui-input-inline">
+					<input type="text" name="class_name" placeholder="请输入班级名称" autocomplete="off" class="layui-input" style="height: 30px;" />
 				</div>
 				<div class="layui-input-inline">
 					<button type="submit" class="layui-btn layui-btn-sm" lay-submit>搜索</button>
-				</div>
-				<div class="layui-input-inline">
-					<a type="button" class="layui-btn layui-btn-sm addBtn" th:data-url="@{/studentManage/toAddClass}">添加班级</a>
 				</div>
 			</form>
 			<div class="layui-row layui-col-space15">
