--- a/src/main/resources/templates/student/docker_list.html
+++ b/src/main/resources/templates/student/docker_list.html
@@ -53,7 +53,7 @@
 						<td th:text="${d.dc_end_datetime}"></td>
 						<td th:text="${d.dc_state}==true?'已使用':'未使用'"></td>
 						<td>
-							<button type="button" class="layui-btn layui-btn-sm layui-btn-normal editBtn" th:data-id="${d.id}">编辑</button>
+							<button type="button" class="layui-btn layui-btn-sm editBtn" th:data-id="${d.id}">编辑</button>
 							<button type="button" class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${d.id}">删除</button>
 						</td>
 					</tr>
