--- a/src/main/resources/templates/student/student_examine.html
+++ b/src/main/resources/templates/student/student_examine.html
@@ -1,198 +1,133 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8" />
-		<title>实验模块设置</title>
-		<meta name="renderer" content="webkit" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="stylesheet" href="../../static/css/font.css" />
-		<link rel="stylesheet" href="../../static/css/xadmin.css" />
-		<link rel="stylesheet" href="../../static/css/layui.css" />
-		<link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css" />
-		<link rel="stylesheet" href="../../static/css/modules/laydate/default/laydate.css" />
+		<title>学生账号审核</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
 		<style>
 			body {
 				padding: 20px;
-				background: #f2f2f2;
-				box-sizing: border-box;
+				background: #f7f7f7;
 			}
 			.layui-fluid {
-				padding: 0;
-			}
-			.search-bar {
-				margin: 0 0 10px 0;
+				padding: 20px;
 				background: #fff;
-				padding: 10px;
+			}
+			#pager {
+				text-align: center;
+			}
+			#pass-dialog {
+				display: none;
+			}
+			.layui-form-label {
+				width: 100px;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="layui-fluid">
-			<form class="layui-form search-bar" th:action="@{/studentManage/toBeReviewd}" method="get">
+			<form class="layui-form" th:action="@{/studentManage/toBeReviewd}" method="get">
 				<div class="layui-input-inline">
-					<input type="text" name="stu_xuehao" placeholder="请输入学号" autocomplete="off" class="layui-input" th:value="${stu_xuehao}" />
+					<input type="text" name="stu_xuehao" placeholder="请输入学号" autocomplete="off" class="layui-input" style="height: 30px;" th:value="${stu_xuehao}" />
 				</div>
 				<div class="layui-input-inline">
-					<button type="submit" class="layui-btn" lay-submit>搜索</button>
+					<button type="submit" class="layui-btn layui-btn-sm" lay-submit>搜索</button>
 				</div>
 			</form>
-			<div class="layui-row layui-col-space15">
-				<div class="layui-col-md12">
-					<div class="layui-card">
-						<div class="layui-card-body layui-table-body layui-table-main">
-							<table class="layui-table">
-								<thead>
-									<tr>
-										<th>学号</th>
-										<th>姓名</th>
-										<th width="3%">是否校外</th>
-										<th>手机</th>
-										<th>操作</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr th:each="student:${waitStudent}">
-										<td th:text="${student.stuXuehao}"></td>
-										<td th:text="${student.stuName}"></td>
-										<td th:text="${student.isStuIsinschool()==true?'是':'否'}"></td>
-										<td th:text="${student.stuMobile}"></td>
-										<td class="td-manage">
-											<button class="layui-btn" lay-submit lay-filter="formDemo" th:name="${student.id}" id="pass">通过</button>
-											<a class="layui-btn layui-btn-danger delBtn" th:data-url="@{|/studentManage/deleteReviewd/${student.id}|}">删除</a>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<div style="display: none; padding-top: 15px; padding-left: 10%; padding-right: 10%;" id="chooseDocker">
-							<form class="layui-form" lay-filter="dataform" id="dataform">
-								<div class="layui-form-item">
-									<div class="layui-inline">
-										<label class="layui-form-label">学号:</label>
-										<div class="layui-input-inline">
-											<input type="text" name="stuXuehao" id="stuXuehao" disabled autocomplete="off" value="该生为校外学生" class="layui-input" />
-										</div>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<div class="layui-inline">
-										<label class="layui-form-label">姓名:</label>
-										<div class="layui-input-inline">
-											<input type="text" name="stuName" id="stuName" disabled autocomplete="off" class="layui-input" />
-										</div>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<label class="layui-form-label">Docker地址:</label>
-									<div class="layui-input-inline">
-										<select name="dc_url" id="url" autocomplete="off"></select>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<label class="layui-form-label">使用开始时间:</label>
-									<div class="layui-input-inline">
-										<input type="text" name="dc_start_datetime" id="beginTime" class="layui-input" />
-									</div>
-								</div>
-								<div class="layui-form-item" pane="">
-									<label class="layui-form-label">使用结束时间:</label>
-									<div class="layui-input-inline">
-										<input type="text" name="dc_end_datetime" id="endTime" class="layui-input" />
-									</div>
-								</div>
-								<div class="layui-form-item" pane="" style="margin-left: 10%;">
-									<div class="layui-input-block">
-										<button type="button" class="layui-btn layui-btn-normal layui-btn-sm" lay-filter="doSubmit" lay-submit="">通过</button>
-										<button type="button" class="layui-btn layui-btn-warm layui-btn-sm" lay-filter="noSubmit" lay-submit="">取消</button>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="layui-card-body">
-							<div class="page">
-								<div>
-									<a class="prev" th:href="@{/studentManage/toBeReviewd(pageNum=${waitStudent.hasPrevious()}?${waitStudent.number}-1:0)}">&lt;&lt;</a>
-									<a class="next" th:href="@{/studentManage/toBeReviewd(pageNum=${waitStudent.hasNext()}?${waitStudent.number}+1:${waitStudent.number})}">&gt;&gt;</a>
-								</div>
-							</div>
+			<table class="layui-table">
+				<thead>
+					<tr>
+						<th>学号</th>
+						<th>姓名</th>
+						<th>是否校外</th>
+						<th>手机</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="student:${waitStudent}">
+						<td th:text="${student.stuXuehao}"></td>
+						<td th:text="${student.stuName}"></td>
+						<td th:text="${student.isStuIsinschool()==true?'是':'否'}"></td>
+						<td th:text="${student.stuMobile}"></td>
+						<td class="td-manage">
+							<button type="button" class="layui-btn layui-btn-sm passBtn" th:data-id="${student.id}">通过</button>
+							<button type="button" class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${student.id}">删除</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="pager"></div>
+			<div id="pass-dialog">
+				<form class="layui-form" lay-filter="dataform" id="dataform" style="padding: 30px 0 0 30px;">
+					<div class="layui-form-item">
+						<label class="layui-form-label">学号:</label>
+						<div class="layui-input-inline">
+							<input type="text" name="stuXuehao" id="stuXuehao" disabled autocomplete="off" value="该生为校外学生" class="layui-input" />
 						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">姓名:</label>
+						<div class="layui-input-inline">
+							<input type="text" name="stuName" id="stuName" disabled autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">Docker地址:</label>
+						<div class="layui-input-inline">
+							<select name="dc_url" id="url" autocomplete="off"></select>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">使用开始时间:</label>
+						<div class="layui-input-inline">
+							<input type="text" name="dc_start_datetime" id="beginTime" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">使用结束时间:</label>
+						<div class="layui-input-inline">
+							<input type="text" name="dc_end_datetime" id="endTime" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label"></label>
+						<div class="layui-input-inline">
+							<button type="button" class="layui-btn" lay-filter="doSubmit" lay-submit="">通过</button>
+							<button type="button" class="layui-btn closeBtn">取消</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
-		<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript" src="../../static/js/xadmin.js"></script>
-		<script>
-			layui.use(['laydate', 'form', 'layer', 'element', 'table', 'jquery'], function () {
-				var laydate = layui.laydate
-				var form = layui.form
-				var layer = layui.layer
-				var $ = layui.jquery
-				let index
-				let s
-				$('.delBtn').click(function (e) {
-					e.preventDefault()
-					var _url = $(this).data('url')
-					layer.confirm('确定要删除该学生吗？', function () {
-						window.location.href = _url
-					})
-				})
-				form.on('submit(formDemo)', function (obj) {
-					s = obj.elem.name
-					studentPass(s)
-					docker()
-				})
-				function studentPass(metal) {
-					$.get('/studentManage/passStuMessage/' + metal, function (data) {
-						$.each(JSON.parse(data), function (k, v) {
-							if (v.stuXuehao == '') {
-								$('#stuXuehao').val('该生为校外学生')
-							} else {
-								$('#stuXuehao').val(v.stuXuehao)
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script th:inline="javascript">
+			$(function () {
+				var layer = layui.layer,
+					form = layui.form,
+					laypage = layui.laypage,
+					laydate = layui.laydate,
+					dialogIndex = null,
+					currentId = null
+				laypage.render({
+					elem: 'pager',
+					layout: ['count', 'prev', 'page', 'next'],
+					curr: parseInt('[[${waitStudent.number}]]') + 1,
+					count: parseInt('[[${waitStudent.totalElements}]]'),
+					jump: function (obj, first) {
+						if (!first) {
+							var _str = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+							var _username = getUrlParam('stu_xuehao')
+							if (_username) {
+								_str += '&stu_xuehao=' + _username
 							}
-							$('#stuName').val(v.stuName)
-						})
-					})
-				}
-				function docker() {
-					index = layer.open({
-						type: 1,
-						skin: 'layui-layer-molv',
-						title: 'Docker分配',
-						shadeClose: false,
-						area: ['500px', '450px'],
-						shade: 0,
-						anim: 2,
-						content: $('#chooseDocker'),
-						success: function () {
-							$('#url')[0].options.length = 0
-							$('#url').append("<option value= 'noValue' selected>&nbsp;</option>")
-							$.get('/studentManage/dockerUrl', function (data) {
-								$.each(JSON.parse(data), function (k, v) {
-									$.each(v, function (i, t) {
-										var options = "<option value='" + t.dc_url + "'>" + t.dc_url + '</option>'
-										$('#url').append(options)
-										form.render('select')
-									})
-								})
-							})
+							window.location.href = _str
 						}
-					})
-				}
-				form.on('submit(noSubmit)', function (obj) {
-					layer.close(index)
-					window.location.reload()
-				})
-				form.on('submit(doSubmit)', function (obj) {
-					let parm = $('#dataform').serialize()
-					$.get('/studentManage/passReviewd/' + s, function () {
-						window.location.reload()
-					})
-					$.post('/studentManage/giveDocker/' + s, parm, function (obj) {
-						layer.close(index)
-					})
+					}
 				})
 				laydate.render({
 					elem: '#beginTime',
@@ -203,7 +138,67 @@
 					elem: '#endTime',
 					type: 'datetime'
 				})
+				$('.passBtn').click(function (e) {
+					e.preventDefault()
+					currentId = $(this).data('id')
+					$.get('/studentManage/passStuMessage/' + currentId, function (data) {
+						$.each(JSON.parse(data), function (k, v) {
+							if (v.stuXuehao == '') {
+								$('#stuXuehao').val('该生为校外学生')
+							} else {
+								$('#stuXuehao').val(v.stuXuehao)
+							}
+							$('#stuName').val(v.stuName)
+						})
+						dialogIndex = layer.open({
+							type: 1,
+							title: 'Docker分配',
+							area: ['450px', '450px'],
+							content: $('#pass-dialog'),
+							success: function () {
+								$('#url')[0].options.length = 0
+								$('#url').append('<option value="noValue" selected> </option>')
+								$.get('/studentManage/dockerUrl', function (data) {
+									$.each(JSON.parse(data), function (k, v) {
+										$.each(v, function (i, t) {
+											var options = "<option value='" + t.dc_url + "'>" + t.dc_url + '</option>'
+											$('#url').append(options)
+											form.render('select')
+										})
+									})
+								})
+							}
+						})
+					})
+				})
+				form.on('submit(doSubmit)', function () {
+					let parm = $('#dataform').serialize()
+					$.get('/studentManage/passReviewd/' + currentId, function () {
+						$.post('/studentManage/giveDocker/' + currentId, parm, function () {
+							layer.close(index)
+							window.location.reload()
+						})
+					})
+				})
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					layer.close(dialogIndex)
+					window.location.reload()
+				})
+				$('.delBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.confirm('确定要删除该学生吗？', function () {
+						window.location.href = '/studentManage/deleteReviewd/' + _id
+					})
+				})
 			})
+			function getUrlParam(name) {
+				var reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)')
+				var r = window.location.search.substr(1).match(reg)
+				if (r != null) return decodeURI(r[2])
+				return null
+			}
 		</script>
 	</body>
 </html>
