--- a/src/main/resources/templates/kuangjia/shiyan.html
+++ b/src/main/resources/templates/kuangjia/shiyan.html
@@ -44,7 +44,7 @@
                     <a href="javascript:;"><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
                     <dl class="layui-nav-child">
                         <dd><a class="to-url" data-url="/grade/score" href="javascript:;">当前课程成绩</a></dd>
-                        <dd><a class="to-url" data-url="/grade/studentlast" href="javascript:;">往期课程成绩</a></dd>
+                        <dd><a class="to-url" data-url="/grade/studentlast/-1" href="javascript:;">往期课程成绩</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
