--- a/src/main/resources/templates/jichu/timePlan_management.html
+++ b/src/main/resources/templates/jichu/timePlan_management.html
@@ -1,179 +1,109 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8" />
-		<title>课程安排管理</title>
-		<meta name="renderer" content="webkit" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-		<link rel="stylesheet" href="../../static/css/font.css" />
-		<link rel="stylesheet" href="../../static/css/layui.css" />
-		<link rel="stylesheet" href="../../static/css/xadmin.css" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>课程安排</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
 		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
-<!--		<script src="../../static/js/layui.js" charset="utf-8"></script>-->
-<!--		<script type="text/javascript" src="../../static/js/xadmin.js"></script>-->
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-label {
+				width: auto;
+				padding: 5px 10px 5px 15px;
+			}
+			.layui-input {
+				height: 30px;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
 	</head>
-	<style>
-		.text-overflow {
-			display: block; /*内联对象需加*/
-			width: 31em; /*指定宽度*/
-			word-break: keep-all; /* 不换行 */
-			white-space: nowrap; /* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-			overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-			text-overflow: ellipsis; /* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-		}
-
-		table {
-			width: 30em;
-			table-layout: fixed; /* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-		}
-		.layui-table th {
-			text-align: center;
-			font-weight: 900;
-		}
-		td {
-			text-align: center;
-			width: 100%;
-			word-break: keep-all; /* 不换行 */
-			white-space: nowrap; /* 不换行 */
-			overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-			text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-		}
-		ul li {
-			display: flex;
-			position: absolute;
-			margin-right: 25%;
-		}
-		.choice-box {
-			width: 70%;
-			/*float: left;*/
-			/*position: relative;*/
-		}
-		label {
-			width: 35%;
-			margin: 0;
-		}
-		#pager {
-			text-align: center;
-		}
-	</style>
 	<body>
 		<div class="layui-fluid">
-			<div class="layui-row layui-col-space15">
-				<div class="layui-col-md12">
-					<div class="layui-card">
-						<div class="layui-card-body" style="margin-bottom: 3%;">
-							<form class="layui-form layui-col-space5" action="/arrangeclass/mhlist" method="get">
-								<ul>
-									<li style="margin-left: 3%;">
-										<div class="layui-form-item choice-box">
-											<label class="layui-form-label">课程</label>
-											<div class="layui-input-block">
-												<select name="courseName" lay-filter="aihao">
-													<option value="">请选择课程</option>
-													<a th:each="courseInfo:${courseInfoList}">
-														<option th:selected="${courseInfo.getCourseName()}==${courseName}" th:value="${courseInfo.getCourseName()}">[[${courseInfo.courseName}]]</option>
-													</a>
-												</select>
-											</div>
-										</div>
-									</li>
-									<li style="margin-left: 20%;">
-										<div class="layui-form-item choice-box">
-											<label class="layui-form-label">教师</label>
-											<div class="layui-input-block">
-												<select name="teacherName" lay-filter="aihao">
-													<option value="">请选择教师</option>
-													<a th:each="user:${userList}">
-														<option th:selected="${user.getNickname()}==${teacherName}" th:value="${user.getNickname()}">[[${user.nickname}]]</option>
-													</a>
-												</select>
-											</div>
-										</div>
-									</li>
-									<li style="margin-left: 35%;">
-										<div class="layui-form-item choice-box">
-											<label class="layui-form-label">班级</label>
-											<div class="layui-input-block">
-												<select name="className" lay-filter="aihao">
-													<option value="">请选择班级</option>
-													<a th:each="class:${classList}">
-														<option th:selected="${class.getClassName()}==${className}" th:value="${class.getClassName()}">[[${class.className}]]</option>
-													</a>
-												</select>
-											</div>
-										</div>
-									</li>
-									<li style="margin-left: 50%;">
-										<div class="layui-input-block">
-											<button type="submit" class="layui-btn">检索</button>
-										</div>
-									</li>
-									<li style="float: right;">
-										<div class="layui-inline layui-show-xs-block">
-											<a href="/arrangeclass/add" class="layui-btn"><i class="layui-icon"></i>增加</a>
-										</div>
-									</li>
-								</ul>
-							</form>
+			<form action="/arrangeclass/mhlist" method="GET" class="layui-form">
+				<div class="layui-form-item">
+					<div class="layui-inline">
+						<button type="button" class="layui-btn layui-btn-sm addBtn">添加</button>
+					</div>
+					<div class="layui-inline">
+						<label class="layui-form-label">课程</label>
+						<div class="layui-input-inline">
+							<select name="courseName">
+								<option value="">请选择课程</option>
+								<option th:each="courseInfo:${courseInfoList}" th:selected="${courseInfo.courseName}==${courseName}" th:value="${courseInfo.courseName}" th:text="${courseInfo.courseName}"></option>
+							</select>
 						</div>
-
-						<div class="layui-card-body">
-							<table class="layui-table layui-form">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>课程名</th>
-										<th>教师</th>
-										<th>班级</th>
-										<th>上课教室名</th>
-										<th>开始时间</th>
-										<th>结束时间</th>
-										<th>操作</th>
-									</tr>
-								</thead>
-
-								<tbody>
-									<tr th:each="arrangeClass:${ArrangeClassDto}">
-										<td th:text="${arrangeClass.getId()}">1</td>
-										<td th:text="${arrangeClass.getCourseName()}">JAVA</td>
-										<td th:text="${arrangeClass.getTeacherName()}">wen</td>
-										<td th:text="${arrangeClass.getClassName()}">18信管03</td>
-										<td th:text="${arrangeClass.getSkAddress()}">A103</td>
-										<td th:text="${arrangeClass.getArrangeStart()}">2020/2/1</td>
-										<td th:text="${arrangeClass.getArrangeEnd()}">2020/2/1</td>
-
-										<td class="td-manage">
-											<a th:href="@{|${arrangeClass.id}/update|}" class="layui-btn layui-btn-primary layui-bg-red" lay-submit>修改</a>
-											<a th:href="@{|${arrangeClass.id}/delete|}" class="layui-btn layui-btn-primary layui-bg-green" lay-submit>删除</a>
-										</td>
-									</tr>
-								</tbody>
-							</table>
+					</div>
+					<div class="layui-inline">
+						<label class="layui-form-label">教师</label>
+						<div class="layui-input-inline">
+							<select name="teacherName">
+								<option value="">请选择教师</option>
+								<option th:each="user:${userList}" th:selected="${user.nickname}==${teacherName}" th:value="${user.nickname}" th:text="${user.nickname}"></option>
+							</select>
 						</div>
-
-						<div id="pager"></div>
-
-<!--						<div class="layui-card-body">-->
-<!--							<div style="margin: 0 auto; width: 80%; text-align: center;">-->
-<!--								<p>当前 <span th:text="${ArrangeClassDto.number}+1"></span> 页, 总 <span th:text="${ArrangeClassDto.totalPages}"></span> 页, 共 <span th:text="${ArrangeClassDto.totalElements}"></span> 条记录</p>-->
-<!--								<a th:href="@{${path}}">首页</a>-->
-<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.hasPrevious()}?${ArrangeClassDto.number}-1:0)}">上一页</a>-->
-<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.hasNext()}?${ArrangeClassDto.number}+1:${ArrangeClassDto.number})}">下一页</a>-->
-<!--								<a th:href="@{${path}(pageNum=${ArrangeClassDto.totalPages}-1)}">尾页</a>-->
-<!--							</div>-->
-<!--						</div>-->
+					</div>
+					<div class="layui-inline">
+						<label class="layui-form-label">班级</label>
+						<div class="layui-input-inline">
+							<select name="className">
+								<option value="">请选择班级</option>
+								<option th:each="class:${classList}" th:selected="${class.className}==${className}" th:value="${class.className}" th:text="${class.className}"></option>
+							</select>
+						</div>
+					</div>
+					<div class="layui-inline">
+						<button type="submit" class="layui-btn layui-btn-sm" lay-submit>查询</button>
 					</div>
 				</div>
-			</div>
+			</form>
+			<table class="layui-table layui-form">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>课程名</th>
+						<th>教师</th>
+						<th>班级</th>
+						<th>上课教室名</th>
+						<th>开始时间</th>
+						<th>结束时间</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="arrangeClass:${ArrangeClassDto}">
+						<td th:text="${arrangeClass.getId()}"></td>
+						<td th:text="${arrangeClass.getCourseName()}"></td>
+						<td th:text="${arrangeClass.getTeacherName()}"></td>
+						<td th:text="${arrangeClass.getClassName()}"></td>
+						<td th:text="${arrangeClass.getSkAddress()}"></td>
+						<td th:text="${arrangeClass.getArrangeStart()}"></td>
+						<td th:text="${arrangeClass.getArrangeEnd()}"></td>
+						<td>
+							<button type="button" class="layui-btn layui-btn-sm editBtn" th:data-id="${arrangeClass.id}">修改</button>
+							<button type="button" class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${arrangeClass.id}">删除</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="pager"></div>
 		</div>
-
 		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
-		<script th:inline="javascript">
+		<script>
 			$(function () {
-				var layer = layui.layer,
-						laypage = layui.laypage
+				var laypage = layui.laypage,
+					layer = layui.layer
 				laypage.render({
 					elem: 'pager',
 					layout: ['count', 'prev', 'page', 'next'],
@@ -183,7 +113,7 @@
 						if (!first) {
 							var _str = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
 							var _courseName = getUrlParam('courseName')
-							console.log(">>"+_courseName)
+							console.log('>>' + _courseName)
 							if (_courseName) {
 								_str += '&courseName=' + _courseName
 							}
@@ -198,6 +128,32 @@
 							window.location.href = _str
 						}
 					}
+				})
+				$('.addBtn').click(function (e) {
+					e.preventDefault()
+					layer.open({
+						type: 2,
+						title: '添加课程',
+						area: ['500px', '480px'],
+						content: '/arrangeclass/add'
+					})
+				})
+				$('.editBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.open({
+						type: 2,
+						title: '修改课程',
+						area: ['500px', '480px'],
+						content: '/arrangeclass/' + _id + '/update'
+					})
+				})
+				$('.delBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.confirm('确定删除吗？', function () {
+						window.location.href = '/arrangeclass/' + _id + '/delete'
+					})
 				})
 			})
 			function getUrlParam(name) {
