--- a/src/main/resources/templates/jichu/timePlan_new.html
+++ b/src/main/resources/templates/jichu/timePlan_new.html
@@ -1,133 +1,106 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8" />
-		<title>新建课程表</title>
-		<meta name="renderer" content="webkit" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link rel="stylesheet" href="../../static/css/laydate.css" />
-		<link rel="stylesheet" href="../../static/css/font.css" />
-		<link rel="stylesheet" href="../../static/css/layui.css" />
-		<link rel="stylesheet" href="../../static/css/xadmin.css" />
-		<link rel="stylesheet" href="../../static/js/laydate/theme/default/laydate.css" />
-		<script src="../../static/js/layui.js" charset="utf-8"></script>
-		<script type="text/javascript" src="../../static/js/xadmin.js"></script>
+		<title>标题</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			.layui-fluid {
+				padding: 20px 30px 0 0;
+			}
+			.error-msg {
+				text-align: center;
+				font-size: 14px;
+				color: red;
+				line-height: 24px;
+			}
+		</style>
 	</head>
-	<style>
-		.layui-upload {
-			margin-left: 150px;
-		}
-		.layui-upload-list {
-			width: 200px;
-			height: 200px;
-			border: #b2b2b2 solid 1px;
-		}
-		.layui-upload-list img {
-			border: 1px black solid;
-			width: 100%;
-			max-height: 100%;
-		}
-		.layui-form input[type='checkbox'],
-		.layui-form input[type='radio'],
-		.layui-form select {
-			display: none;
-		}
-		#div1 {
-			width: 80%;
-		}
-	</style>
 	<body>
 		<div class="layui-fluid">
-			<div class="layui-row layui-col-space15">
-				<div class="layui-col-md12">
-					<div class="layui-card">
-						<div class="layui-card-body">
-							<p th:text="${msg}" class="error-msg" style="color: red;">这里是错误信息</p>
-							<form class="layui-form" action="/arrangeclass/add" method="post">
-								<div class="layui-form-item">
-									<label class="layui-form-label">课程</label>
-									<div class="layui-input-block">
-										<select name="courseId" lay-filter="aihao" required="required" lay-verify="required">
-											<option value="">请选择课程</option>
-											<a th:each="courseInfo:${courseInfoList}">
-												<option th:value="${courseInfo.getId()}">[[${courseInfo.courseName}]]</option>
-											</a>
-										</select>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<label class="layui-form-label">教师</label>
-									<div class="layui-input-block">
-										<select name="teacherId" lay-filter="aihao" required="required" lay-verify="required">
-											<option value="">请选择教师</option>
-											<a th:each="user:${userList}">
-												<option th:value="${user.getId()}">[[${user.nickname}]]</option>
-											</a>
-										</select>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<label class="layui-form-label">班级</label>
-									<div class="layui-input-block">
-										<select name="classId" lay-filter="aihao" required="required" lay-verify="required">
-											<option value="">请选择班级</option>
-											<a th:each="class:${classList}">
-												<option th:value="${class.getClassId()}">[[${class.className}]]</option>
-											</a>
-										</select>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<label class="layui-form-label">上课教室</label>
-									<div class="layui-input-block">
-										<input name="skAddress" type="text" required lay-verify="required" placeholder="请输入上课教室名" autocomplete="off" class="layui-input" />
-									</div>
-								</div>
-								<div class="layui-form">
-									<div class="layui-form-item">
-										<div class="layui-inline">
-											<div class="layui-inline">
-												<label class="layui-form-label">开始时间</label>
-												<div class="layui-input-inline">
-													<input name="arrangeStart" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss" />
-												</div>
-											</div>
-										</div>
-										<div class="layui-inline">
-											<div class="layui-inline">
-												<label class="layui-form-label">结束时间</label>
-												<div class="layui-input-inline">
-													<input name="arrangeEnd" type="text" class="layui-input" id="test2" placeholder="yyyy-MM-dd HH:mm:ss" />
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="layui-form-item">
-									<div class="layui-input-block">
-										<button class="layui-btn" lay-submit lay-filter="formDemo">添加完成</button>
-									</div>
-								</div>
-							</form>
-						</div>
+			<form class="layui-form" action="/arrangeclass/add" method="post">
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程</label>
+					<div class="layui-input-block">
+						<select name="courseId" lay-verify="required">
+							<option value="">请选择课程</option>
+							<option th:each="courseInfo:${courseInfoList}" th:value="${courseInfo.getId()}">[[${courseInfo.courseName}]]</option>
+						</select>
 					</div>
 				</div>
-			</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">教师</label>
+					<div class="layui-input-block">
+						<select name="teacherId" lay-verify="required">
+							<option value="">请选择教师</option>
+							<option th:each="user:${userList}" th:value="${user.getId()}">[[${user.nickname}]]</option>
+						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">班级</label>
+					<div class="layui-input-block">
+						<select name="classId" lay-verify="required">
+							<option value="">请选择班级</option>
+							<option th:each="class:${classList}" th:value="${class.getClassId()}">[[${class.className}]]</option>
+						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">上课教室</label>
+					<div class="layui-input-block">
+						<input name="skAddress" type="text" required lay-verify="required" placeholder="请输入上课教室名" autocomplete="off" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">开始时间</label>
+					<div class="layui-input-block">
+						<input name="arrangeStart" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">结束时间</label>
+					<div class="layui-input-block">
+						<input name="arrangeEnd" type="text" class="layui-input" id="test2" placeholder="yyyy-MM-dd HH:mm:ss" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<div class="layui-input-block">
+						<button type="submit" class="layui-btn" lay-submit lay-filter="do">添加完成</button>
+						<button type="button" class="layui-btn layui-btn-primary closeBtn">取消</button>
+					</div>
+				</div>
+			</form>
+			<p th:text="${msg}" class="error-msg"></p>
 		</div>
-		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../static/js/laydate/laydate.js" type="text/javascript" charset="utf-8"></script>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
 		<script>
-			layui.use('laydate', function () {
-				var laydate = layui.laydate
-				//日期时间选择器
+			$(function () {
+				var index = parent.layer.getFrameIndex(window.name)
+				var laydate = layui.laydate,
+					form = layui.form
 				laydate.render({
 					elem: '#test5',
-					type: 'datetime'
+					type: 'datetime',
+					trigger: 'click',
+					position: 'fixed'
 				})
-				//日期时间选择器
 				laydate.render({
 					elem: '#test2',
-					type: 'datetime'
+					type: 'datetime',
+					trigger: 'click',
+					position: 'fixed'
+				})
+				form.on('submit(do)', function () {
+					parent.layer.close(index)
+				})
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					parent.layer.close(index)
 				})
 			})
 		</script>
