--- a/src/main/resources/templates/jichu/timetable_update.html
+++ b/src/main/resources/templates/jichu/timetable_update.html
@@ -1,143 +1,100 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <title>修改课程表</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="../../static/css/laydate.css">
-
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-
-    <!--<script src="../../static/js/layer.js" type="text/javascript" charset="utf-8"></script>-->
-</head>
-<style>
-    .layui-upload{
-        margin-left: 150px;
-    }
-    .layui-upload-list{
-        width: 200px;
-        height: 200px;
-        border: #B2B2B2 solid 1px;
-    }
-    .layui-upload-list img{
-        border: 1px black solid;
-        with:100%;
-        max-height: 100%;
-    }
-    /*.layui-upload-list img{*/
-    /*width: 100%;*/
-    /*max-height: 100%;*/
-    /*}*/
-    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select{
-        display: none;
-    }
-    #div1{
-        with:80%
-    }
-</style>
-
-
-<body>
-
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body ">
-                    <form class="layui-form" th:action="@{update}" th:object="${courseInfo}" method="post" enctype="multipart/form-data">
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">课程名称</label>
-                            <div class="layui-input-block">
-                                <input name="courseName" th:value="${courseInfo.getCourseName()}" type="text" required  lay-verify="required" placeholder="请输入课程名称" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">课程代码</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="courseCode" th:value="${courseInfo.getCourseCode()}" required lay-verify="required" placeholder="请输入课程代码" autocomplete="off" class="layui-input">
-                            </div>
-                            <!--<div class="layui-form-mid layui-word-aux">辅助文字</div>-->
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">课程负责人</label>
-                            <div class="layui-input-block">
-                                <select name="teacherId" lay-filter="aihao" required="required" lay-verify="required">
-                                    <a th:each="user:${userList}">
-                                        <option th:selected="${user.getId()}==${courseInfo.getTeacherId()}" th:value="${user.getId()}">[[${user.nickname}]]</option>
-                                    </a>
-
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">课程图片:</label>
-                            <div class="layui-upload">
-                                <input type="file" name="attachs" id="uploadImg" value="上传图片" onchange="xmTanUploadImg(this)"/>
-                                <div class="layui-upload-list">
-                                    <img th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}" class="layui-upload-img" id="selectImg" >
-                                    <p id="demoText"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="layui-form-item layui-form-text">
-                            <label class="layui-form-label">课程介绍:</label>
-
-                            <div class="layui-input-block">
-                                <input type="text" name="courseIntruduce" th:value="${courseInfo.getCourseIntruduce()}" required lay-verify="required" placeholder="请输入课程介绍" autocomplete="off" class="layui-input">
-                            </div>
-                            <!--                            <div class="layui-input-block" id="div1">-->
-                            <!--                                <p>请输入课程介绍</p>-->
-                            <!--                            </div>-->
-                        </div>
-
-                        <div class="layui-form-item">
-                            <div class="layui-input-block">
-                                <button type="submit" class="layui-btn" lay-submit lay-filter="formDemo">修改完成</button>
-                                <button type="reset" class="layui-btn layui-btn-primary">删除</button>
-                            </div>
-                        </div>
-                    </form>
-
-
-
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-<script type="text/javascript" src="../../static/js/wangEditor.js"></script>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    var E = window.wangEditor
-
-    var editor1 = new E('#div1')
-    editor1.create()
-
-
-    layui.use(['element','form'],function () {
-        var form = layui.form;
-    })
-    function xmTanUploadImg(obj) {
-        var file = obj.files[0];
-        var reader = new FileReader();
-        reader.readAsDataURL(file);
-        reader.onload = function(e) { //成功读取文件
-            var img = document.getElementById("selectImg");
-            img.src = e.target.result;
-        };
-    }
-
-</script>
-
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>标题</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			.layui-fluid {
+				padding: 20px 30px 0 0;
+			}
+			.preview-box {
+				border: 1px solid #ccc;
+				padding: 5px;
+				box-sizing: border-box;
+				margin-top: 10px;
+				position: relative;
+				height: 200px;
+				width: 200px;
+			}
+			.preview-box img {
+				display: block;
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
+				max-width: 100%;
+				max-height: 100%;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form" th:action="@{update}" th:object="${courseInfo}" method="post" enctype="multipart/form-data">
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程名称</label>
+					<div class="layui-input-block">
+						<input name="courseName" th:value="${courseInfo.getCourseName()}" type="text" lay-verify="required" placeholder="请输入课程名称" autocomplete="off" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程代码</label>
+					<div class="layui-input-block">
+						<input type="text" name="courseCode" th:value="${courseInfo.getCourseCode()}" lay-verify="required" placeholder="请输入课程代码" autocomplete="off" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程负责人</label>
+					<div class="layui-input-block">
+						<select name="teacherId" lay-filter="aihao" required="required" lay-verify="required">
+							<option th:each="user:${userList}" th:selected="${user.getId()}==${courseInfo.getTeacherId()}" th:value="${user.getId()}">[[${user.nickname}]]</option>
+						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程图片:</label>
+					<div class="layui-input-block">
+						<label for="fileInput" class="layui-btn"><i class="layui-icon layui-icon-upload"></i>上传图片</label>
+						<input type="file" name="attachs" id="fileInput" style="display: none;" />
+						<div class="preview-box">
+							<img class="layui-upload-img" id="preview" th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}" />
+						</div>
+					</div>
+				</div>
+				<div class="layui-form-item layui-form-text">
+					<label class="layui-form-label">课程介绍:</label>
+					<div class="layui-input-block">
+						<input type="text" name="courseIntruduce" th:value="${courseInfo.getCourseIntruduce()}" lay-verify="required" placeholder="请输入课程介绍" autocomplete="off" class="layui-input" />
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<div class="layui-input-block">
+						<button type="submit" class="layui-btn" lay-filter="do" lay-submit>修改完成</button>
+						<button type="button" class="layui-btn layui-btn-primary closeBtn">取消</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var index = parent.layer.getFrameIndex(window.name)
+				var form = layui.form
+				form.on('submit(do)', function () {
+					parent.layer.close(index)
+				})
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					parent.layer.close(index)
+				})
+				$('#fileInput').live('change', function () {
+					$('#preview').attr('src', URL.createObjectURL(this.files[0]))
+				})
+			})
+		</script>
+	</body>
 </html>
